--- a/views/index.pug
+++ b/views/index.pug
@@ -1,22 +1,22 @@
 doctype html
 head
-	title Tic Tac Toe
-	meta(charset='UTF-8')
-	style
-		include ../src/styles.css
+  title Tic Tac Toe
+  meta(charset='UTF-8')
+  style
+    include ../src/styles.css
 
 body
   h1 Tic Tac Toe
   p#info
-    | Player 1 you are playing with X
+    | Player 1 is X
     br
-    | Player 2 you are playing with O
+    | Player 2 is O
     br
     br
-    | Player 1 you start
+    | Player 1 starts
   #board
   p#c
-  button(type='submit' onclick='clearTBL(tbl)') Restart
+  button(type='submit' onclick='clearTable(table)') Restart
   script
     include ../src/game.js
 
