#input lisätty buttonin tilalle

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ body
     | Player 1 starts
   #board
   p#c
-  button(type='submit' onclick='clearTable()') Restart
+  #input(type='submit' onclick='clearTable()') Restart
   script
     include ../src/game.js
 
