#input JA button

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,11 @@ body
     | Player 1 starts
   #board
   p#c
-  #input(type='submit' onclick='clearTable()') Restart
+  #input(type='submit' onclick='clearTable()') 
+    button(type='button') Restart
+
   script
     include ../src/game.js
+
+
 
