inputtia taas muokattu

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,8 +16,7 @@ body
     | Player 1 starts
   #board
   p#c
-  #input(type='submit' onclick='clearTable()') 
-    button(type='button') Restart
+  input(type='submit' value = "Restart" onclick='clearTable()')
 
   script
     include ../src/game.js
